fix(swagger): swagger测试tag时，无法调用任何结构，参入参数无法解析
1. 兼容json和form两种格式 parm 2. 更新post update body json

Closes #3
