# docs/swagger.json
@@ -30,12 +30,13 @@
                         ],
                         "type": "integer",
                         "default": 1,
-                        "description": "状态",
+                        "description": "状态，是否启用(0 为禁用、1 为启用)",
                         "name": "state",
                         "in": "query"
                     },
                     {
                         "type": "integer",
+                        "default": 1,
                         "description": "页码",
                         "name": "page",
                         "in": "query"
@@ -75,38 +76,12 @@
                 "summary": "新增标签",
                 "parameters": [
                     {
-                        "maxLength": 100,
-                        "minLength": 3,
-                        "description": "标签名称",
-                        "name": "name",
+                        "description": "请求体",
+                        "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "enum": [
-                            0,
-                            1
-                        ],
-                        "default": 1,
-                        "description": "是否启用(0 为禁用、1 为启用)",
-                        "name": "state",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "maxLength": 100,
-                        "minLength": 3,
-                        "description": "创建者",
-                        "name": "created_by",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/service.CreateTagRequest"
                         }
                     }
                 ],
@@ -147,37 +122,12 @@
                         "required": true
                     },
                     {
-                        "maxLength": 100,
-                        "minLength": 3,
-                        "description": "标签名称",
-                        "name": "name",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "enum": [
-                            0,
-                            1
-                        ],
-                        "default": 1,
-                        "description": "是否启用(0 为禁用、1 为启用)",
-                        "name": "state",
-                        "in": "body",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "maxLength": 100,
-                        "minLength": 3,
-                        "description": "修改者",
-                        "name": "modified_by",
+                        "description": "请求体",
+                        "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/service.UpdateTagRequest"
                         }
                     }
                 ],
@@ -318,6 +268,52 @@
                 "pager": {
                     "type": "object",
                     "$ref": "#/definitions/app.Pager"
+                }
+            }
+        },
+        "service.CreateTagRequest": {
+            "type": "object",
+            "required": [
+                "created_by",
+                "name"
+            ],
+            "properties": {
+                "created_by": {
+                    "description": "创建者",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "标签名称",
+                    "type": "string"
+                },
+                "state": {
+                    "description": "状态，是否启用(0 为禁用、1 为启用)",
+                    "type": "integer"
+                }
+            }
+        },
+        "service.UpdateTagRequest": {
+            "type": "object",
+            "required": [
+                "id",
+                "modifiedBy"
+            ],
+            "properties": {
+                "id": {
+                    "description": "标签id",
+                    "type": "integer"
+                },
+                "modifiedBy": {
+                    "description": "修改者",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "标签名称",
+                    "type": "string"
+                },
+                "state": {
+                    "description": "状态，是否启用(0 为禁用、1 为启用)",
+                    "type": "integer"
                 }
             }
         }
