# internal/routers/api/v1/tag.go
@@ -21,8 +21,8 @@ func (t Tag) Get(c *gin.Context) {}
 // @Summary 获取多个标签
 // @Produce  json
 // @Param name query string false "标签名称" maxlength(100)
-// @Param state query int false "状态" Enums(0, 1) default(1)
-// @Param page query int false "页码"
+// @Param state query int false "状态，是否启用(0 为禁用、1 为启用)" Enums(0, 1) default(1)
+// @Param page query int false "页码" default(1)
 // @Param page_size query int false "每页数量"
 // @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
@@ -43,7 +43,7 @@ func (t Tag) List(c *gin.Context) {
 	// 处理分页参数，防止出现异常
 	pager := app.Pager{Page: app.GetPage(c), PageSize: app.GetPageSize(c)}
 	// 获取标签总数，这里不用传name时可以拉到所有标签，State代表禁用启用
-	// TODO 这里查询列表有必要传入标签名吗？
+	// 这里查询列表，如果传入标签名就只查询某同名标签（未做唯一性验证）
 	totalRows, err := svc.CountTag(&service.CountTagRequest{Name: param.Name, State: param.State})
 	if err != nil {
 		global.Logger.Errorf("svc.CountTag err: %v", err)
@@ -64,9 +64,7 @@ func (t Tag) List(c *gin.Context) {
 
 // @Summary 新增标签
 // @Produce  json
-// @Param name body string true "标签名称" minlength(3) maxlength(100)
-// @Param state body int false "是否启用(0 为禁用、1 为启用)" Enums(0, 1) default(1)
-// @Param created_by body string true "创建者" minlength(3) maxlength(100)
+// @Param data body service.CreateTagRequest true "请求体"
 // @Success 200 {object} model.Tag "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
@@ -97,9 +95,7 @@ func (t Tag) Create(c *gin.Context) {
 // @Summary 更新标签
 // @Produce  json
 // @Param id path int true "标签 ID"
-// @Param name body string false "标签名称" minlength(3) maxlength(100)
-// @Param state body int false "是否启用(0 为禁用、1 为启用)" Enums(0, 1) default(1)
-// @Param modified_by body string true "修改者" minlength(3) maxlength(100)
+// @Param data body service.UpdateTagRequest true "请求体"
 // @Success 200 {object} model.Tag "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
